# bako-safe-doc

./: README.md  next.config.mjs  package.json  pnpm-lock.yaml  theme.config.tsx  tsconfig.json
components/box-example/: index.tsx
components/example/: index.tsx
components/fuel/: IsConnected.tsx
components/table/: table.tsx
components/transaction/: inde.ts  intance.tsx  send.tsx  sign.tsx
components/vault/: address.tsx  assets.tsx  balance.tsx  create.tsx  index.ts
hooks/: index.ts  useTransaction.ts  useVault.ts
hooks/fuel/: useIsConnected.ts
pages/: _meta.js  _meta.json  how-it-works.mdx  index.mdx  installation.mdx
pages/Connector/: _meta.json  b.mdx
pages/connector/: _meta.js  _meta.json  a.mdx  flow.mdx  flow.txt  overview.mdx  quick-start.mdx  what.mdx
pages/connector/quick-start/: _meta.js  _meta.json  installation.mdx  pre-requisites.mdx
pages/gateway/: _meta.js  _meta.json  examples.mdx  overview.mdx  quick-start.mdx
pages/quick-start/: _meta.json  installation.mdx  transaction.mdx  vault.mdx
pages/sdk/: _meta.js  _meta.json  auth.mdx  authentication.mdx  installation.mdx  overview.mdx  quick-start.mdx  safe-code.mdx  setup.mdx  standalone.mdx  transaction.mdx  vault.mdx  version.mdx
snippets/rust-contract-deploy/: .gitignore  Cargo.toml
snippets/rust-contract-deploy-example/: Cargo.toml
snippets/rust-upgrade-chain-example/: Cargo.toml
snippets/rust-upgrade-chain-example/local-testnet/: fuel-core-wasm-executor.wasm  state_config.json
snippets/rust-upgrade-chain-example/tests/: lib.rs  upgrade.rs  upload.rs
(+74 files in other folders)
